# broadcast-rights-mapping

./: .env.example  .gitignore  README.md  all_local_rights_scraper.py  broadcast_rights_outline  espn_bulk_scraper.py  pyproject.toml  scrape_espn.py
data/: espn_games_20250409_1736544116.csv  espn_games_20250409_1736544343.csv  espn_games_nhl_20250111_1736545610.csv
mapping_files/: zip_dma_mapping.csv  zip_dma_mapping_testing.csv
rights_scripts/: all_local_rights_scraper.py  nhl_rights_scraper.py  zip_mapping_join.py
schedule_scripts/: espn_game_scraper.py
scripts/: claude_brave_completions.py  mlb_rights_scraper.py  nba_rights_scraper.py  nhl_rights_scraper.py
watch_options_scripts/: schedule_join.py
