[project]
name = "broadcast-rights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "anthropic>=0.45.1",
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "logging>=0.4.9.6",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
